package(default_visibility = ["//visibility:public"])
java_library(

    name = "abstractfactory",
    srcs = [
        "//abstract-factory/src/main/java/com/iluwatar/abstractfactory:sources"
    ],
    deps = [
        "//abstract-factory:main_dependencies"
    ],
    runtime_deps = [
        
    ],
    
)

sources()
