package(default_visibility = ["//visibility:public"])
java_junit5_test(
    
     
    name = "abstractfactory",
    srcs = [
        "//abstract-factory/src/test/java/com/iluwatar/abstractfactory:sources"
    ],
    deps = [
        "//abstract-factory/src/main/java/com/iluwatar/abstractfactory:abstractfactory" , 
        "//abstract-factory:tests_dependencies"
    ],
    runtime_deps = [
        
    ],
    
    test_package = "com.iluwatar.abstractfactory",
     
)

sources()
