package(default_visibility = ["//visibility:public"])
scala_library(

    name = "builder",
    srcs = [
        "//builder/src/main/java/com/iluwatar/builder:sources"
    ],
    deps = [
        "//builder/src/main/java/com/iluwatar/builder:builder" , 
        "//builder:main_dependencies"
    ],
    runtime_deps = [
        
    ],
    
)


scala_library(

    name = "builder",
    srcs = [
        "//builder/src/main/java/com/iluwatar/builder:sources"
    ],
    deps = [
        "//builder:main_dependencies"
    ],
    runtime_deps = [
        
    ],
    
)

sources()
