package(default_visibility = ["//visibility:public"])
java_junit5_test(
    
     
    name = "tls",
    srcs = [
        "//tls/src/test/java/com/iluwatar/tls:sources"
    ],
    deps = [
        "//tls/src/main/java/com/iluwatar/tls:tls" , 
        "//tls:tests_dependencies"
    ],
    runtime_deps = [
        
    ],
    
    test_package = "com.iluwatar.tls",
     
)

sources()
