package(default_visibility = ["//visibility:public"])
java_junit5_test(
    
     
    name = "list",
    srcs = [
        "//iterator/src/test/java/com/iluwatar/iterator/list:sources"
    ],
    deps = [
        "//iterator/src/main/java/com/iluwatar/iterator:agg=._bst_list" , 
        "//iterator:tests_dependencies"
    ],
    runtime_deps = [
        
    ],
    
    test_package = "com.iluwatar.iterator.list",
     
)

sources()
